<resources>
    <string name="app_name">Movie Blipp</string>
    <string name="splash_image">Splash Image</string>
    <string name="movie_image">Movie Image</string>
    <string name="upcoming">Upcoming</string>
    <string name="view_all">View All</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="search_button">Search Button</string>
    <string name="banner_image">banner image</string>
    <string name="description">Description</string>
    <string name="genres">Genres</string>
    <string name="cast">Cast</string>
    <string name="actor_name">Actor Name</string>
    <string name="known_for">Known for</string>
    <string name="bio">Bio</string>
    <string name="birthday">Birthday</string>
    <string name="card_image">Card Image</string>
    <string name="hello_blank_fragment">Empty fragment</string>
    <string name="bio_actor_title">Bio</string>
    <string name="best_movies_title">Best Movies</string>
    <string name="related">Related</string>
    <string name="search">Search</string>
    <string name="_8_5_10">8.5/10</string>
    <string name="minutes_placeholder">153 minutes</string>
    <string name="_10_april_2020">10 April 2020</string>
</resources>