<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.ArtistDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/header_gradient_bg"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/buttonBack"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:contentDescription="@string/banner_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_header"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bookmarks"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:contentDescription="@string/search_button"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_baseline_bookmarks_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="@dimen/_69sdp"
            android:layout_height="@dimen/_98sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            app:cardElevation="0dp"
            app:layout_constraintCircleRadius="@dimen/_1sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/actor_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="bottom"
                android:background="@drawable/card_gradient_black"
                android:focusable="false" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_actor_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toTopOf="@id/image_card"
            tools:text="@string/actor_name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_also_known_as"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:maxLines="4"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/text_actor_name"
            tools:text="@string/known_for" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_popularity"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:drawableStart="@drawable/ic_baseline_thumb_up_24"
            android:drawablePadding="@dimen/_2sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/text_also_known_as"
            tools:text="@string/popular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_character"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/text_popularity"
            tools:text="Characters" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_birthday"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:drawablePadding="@dimen/_2sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/text_character"
            tools:text="@string/birthday" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading_bio"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:text="@string/bio_actor_title"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_card" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_bio"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:text="@string/bio"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_bio" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading_best_movie"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/best_movies_title"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bio" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_best_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_best_movie"
            tools:listitem="@layout/item_movie_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>